--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "NewsNuggets",
   "version": "1.0.0",
+  "engines": {
+    "node":"7.8.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -22,7 +25,8 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.4",
     "express-handlebars": "^3.0.0",
-    "mongoose": "^4.11.12",
+    "mongoose": "^4.10.0",
+    "morgan": "^1.8.2",
     "request": "^2.82.0"
   }
 }
